ifupdown (0.8.34) UNRELEASED; urgency=medium

  * Handle SIGINT and SIGTERM more gracefully.

 -- Guus Sliepen <guus@debian.org>  Thu, 24 May 2018 17:17:41 +0200

ifupdown (0.8.33) unstable; urgency=medium

  [ Guus Sliepen ]
  * Allow an interface to recursively bring up VLAN interfaces.
    Closes: #899355

  [ Benjamin Drung ]
  * Split 'udevadm settle' from networking.service. Closes: #899002

 -- Guus Sliepen <guus@debian.org>  Thu, 24 May 2018 16:33:17 +0200

ifupdown (0.8.32) unstable; urgency=medium

  [ Guus Sliepen ]
  * Fix check-mac-address.sh and get-mac-address.sh example scripts.
  * Update the manpages and add an entry to NEWS about the possibility that
    ifupdown runs in parallel. Closes: #894511
  * Migrate the VCS repository to Salsa.
  * Allow ifquery to be run recursively from ifup and ifdown. Closes: #896433

  [ Filipe Brandenburger ]
  * Prevent ExecStartPre from exiting with non-zero status when not supposed
    to do anything. Closes: #894759

 -- Guus Sliepen <guus@debian.org>  Tue, 24 Apr 2018 18:15:34 +0200

ifupdown (0.8.31) unstable; urgency=medium

  * Do not enable ifupdown-wait-online.service by default. Closes: #891139
  * Drop Before=network.target from ifupdown-wait-online.service. 

 -- Guus Sliepen <guus@debian.org>  Sat, 03 Mar 2018 17:49:51 +0100

ifupdown (0.8.30) unstable; urgency=medium

  [ Guus Sliepen ]
  * Use >&2 instead of >/dev/stderr. Closes: #890988
  * Bump Standards-Version and debian/compat.

  [ Arthur Gautier ]
  * Use ip instead of writing to /sys to better supported network namespaces.

 -- Guus Sliepen <guus@debian.org>  Wed, 21 Feb 2018 22:02:31 +0100

ifupdown (0.8.29) unstable; urgency=medium

  [ Sven Joachim ]
  * Remove obsolete conffiles from the system. Closes: #879802

 -- Guus Sliepen <guus@debian.org>  Thu, 26 Oct 2017 20:25:15 +0200

ifupdown (0.8.28) unstable; urgency=medium

  * Fix testsuite failure if ifupdown isn't already installed. 
